BUGFIX: First cell should overlap the rest when in sticky-headers so the dropdown shows correctly

--- a/src/angular-ui-query-builder-tables.css
+++ b/src/angular-ui-query-builder-tables.css
@@ -15,6 +15,11 @@
 	z-index: 1;
 }
 
+.qb-table.qb-sticky-thead thead > tr > td:first-child,
+.qb-table.qb-sticky-thead thead > tr > th:first-child {
+	z-index: 2;
+}
+
 .qb-table.qb-sticky-thead thead > tr > td:after,
 .qb-table.qb-sticky-thead thead > tr > th:after {
 	content: '';
